--- a/res/layout/fragment_singlespell.xml
+++ b/res/layout/fragment_singlespell.xml
@@ -21,6 +21,17 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/title"
         android:text="description"
-        android:textSize="15sp" />
+        android:textSize="15sp"
+        android:layout_marginTop="@dimen/activity_vertical_margin" />
+
+    <ImageView
+        android:id="@+id/image"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/description"
+        android:scaleType="fitCenter"
+        android:adjustViewBounds="true"
+        android:src="@drawable/default_spell"
+        android:layout_marginTop="@dimen/activity_vertical_margin" />
     
 </RelativeLayout>
