Fragment transitions added

--- a/res/layout/fragment_categorylist.xml
+++ b/res/layout/fragment_categorylist.xml
@@ -2,14 +2,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#ffffff"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="org.wregen.spells.AlphabeticListFragment" >
 
-    <ListView
-        android:id="@+id/spellList"
+    <TextView
+        android:id="@+id/text1"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:focusable="false"
-        android:focusableInTouchMode="false" />
+        android:text = "fragment_categorylist.xml" />
 
 </RelativeLayout>
