--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -7,6 +7,7 @@
 
     <FrameLayout
         android:id="@+id/container"
+        android:background="#ffffff"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
