--- a/res/layout/fragment_navigation_drawer.xml
+++ b/res/layout/fragment_navigation_drawer.xml
@@ -1,7 +1,8 @@
+
 <ListView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#ff3e5d01"
+    android:background="@color/blue_grey_800"
     android:choiceMode="singleChoice"
     tools:context="org.wregen.spells.NavigationDrawerFragment" />
