--- a/res/layout/item_singlespell.xml
+++ b/res/layout/item_singlespell.xml
@@ -27,7 +27,13 @@
             android:layout_marginTop="@dimen/activity_vertical_margin"
             android:adjustViewBounds="true"
             android:scaleType="fitCenter"
-            android:src="@drawable/default_spell" />
+            android:background="@drawable/rounded_corner"
+            android:src="@drawable/default_spell"
+            android:shadowColor="@color/grey_200"
+                  android:shadowDx="1"
+                  android:shadowDy="1"
+                  android:shadowRadius="2"
+             />
 
         <TextView
             android:id="@+id/description"
@@ -36,6 +42,16 @@
             android:layout_marginTop="@dimen/activity_vertical_margin"
             android:text="description"
             android:textAppearance="?android:attr/textAppearanceMedium" />
+        
+        <TextView
+            android:id="@+id/category"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/activity_vertical_margin"
+            android:text="category"
+            android:background="@drawable/rounded_corner"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
+        
     </LinearLayout>
 
 </ScrollView>
